// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly 1`] = `
<DocumentFragment>
  <script
    class="structured_data"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"HowTo","steps":[{"@type":"HowToStep","text":"Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.To learn more, see Connect to MongoDB","name":"Connect to your deployment"},{"@type":"HowToStep","text":"Import data from CSV or JSON files into your MongoDB database.To learn more, see Import and Export Data","name":"Import your data"}],"name":"Connect to a MongoDB deployment hosted on MongoDB Atlas","image":"https://webimages.mongodb.com/_com_assets/cms/kuyj2focmkbxv7gh3-stacked_default_slate_blue.svg?auto=format%252Ccompress"}
  </script>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 600;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10>span>code,
.emotion-10>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10:focus,
.emotion-10:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-10:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-10:hover {
  text-decoration-color: #E8EDEB;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="emotion-8"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-8"
        >
          <a
            class="emotion-10"
            href="/connect#std-label-connect-run-compass/"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="emotion-8"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-8"
        >
          <a
            class="emotion-10"
            href="/import-export#std-label-compass-import-export/"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 5px;
  column-gap: 5px;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 32px;
  line-height: 40px;
  font-weight: 400;
  font-family: 'MongoDB Value Serif','Times New Roman',serif;
  color: #00684A;
  margin-top: 24px;
  margin-bottom: 8px;
  color: var(--heading-color-primary);
  margin-top: 16px;
  margin-bottom: 24px;
}

.emotion-10 {
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 10px;
  visibility: hidden;
}

.emotion-11 {
  color: #889397;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  margin-top: -2px;
}

.emotion-12 {
  display: none;
}

.emotion-13 {
  display: inline;
  left: 0;
  top: 0;
  margin-top: -85px;
  position: absolute;
  padding-bottom: 2px;
}

@media only screen and (max-width: 767px) {
  .emotion-13 {
    margin-top: -85px;
  }
}

.emotion-14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
  min-width: 175px;
}

.emotion-14 [data-theme] {
  width: 310px;
  margin-left: -100px;
}

@media only screen and (max-width: 1024px) {
  .emotion-14 {
    display: none;
  }
}

.emotion-15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 28px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  z-index: 1;
}

.emotion-15:focus-visible,
.emotion-15[data-focus="true"] {
  outline: none;
}

.emotion-15:active,
.emotion-15[data-active="true"],
.emotion-15:focus,
.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15:focus-visible,
.emotion-15[data-focus="true"] {
  color: #001E2B;
}

.emotion-15:hover,
.emotion-15[data-hover="true"],
.emotion-15:active,
.emotion-15[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-15:focus-visible,
.emotion-15[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:focus,
.emotion-15:focus-visible,
.emotion-15:active {
  border-right-color: #889397;
}

.emotion-16 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-17 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-18 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-19 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 28px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  margin-left: -1px;
  width: 32px;
}

.emotion-19:focus-visible,
.emotion-19[data-focus="true"] {
  outline: none;
}

.emotion-19:active,
.emotion-19[data-active="true"],
.emotion-19:focus,
.emotion-19:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19:focus-visible,
.emotion-19[data-focus="true"] {
  color: #001E2B;
}

.emotion-19:hover,
.emotion-19[data-hover="true"],
.emotion-19:active,
.emotion-19[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-19:focus-visible,
.emotion-19[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-19:focus,
.emotion-19:focus-visible,
.emotion-19:hover {
  z-index: 1;
}

.emotion-19,
.emotion-19:hover,
.emotion-19:focus,
.emotion-19:focus-visible,
.emotion-19:active {
  border-left-color: #889397;
}

.emotion-19 svg {
  color: #3D4F58;
}

.emotion-22 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #001E2B;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-22 .lg-ui-button-0000:hover,
.emotion-22 .lg-ui-button-0000:active {
  color: currentColor;
}

.emotion-24 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-24 strong,
.emotion-24 b {
  font-weight: 600;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 1
              <a
                class="headerlink emotion-10"
                href="#step-1"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M6.03867 9.95309C5.91948 9.8323 5.81065 9.70512 5.71217 9.57265L7.16282 8.12843C7.2355 8.27756 7.33323 8.41753 7.45605 8.54199C8.06167 9.15571 9.04795 9.1601 9.65896 8.55179L12.5432 5.68033C13.1542 5.07203 13.1586 4.08138 12.553 3.46767C11.9473 2.85395 10.9611 2.84956 10.3501 3.45786L9.97109 3.83515C9.5797 4.22481 8.94791 4.222 8.55996 3.82887C8.17202 3.43574 8.17482 2.80115 8.56622 2.41149L8.94518 2.03421C10.339 0.646579 12.5888 0.656589 13.9703 2.05657C15.3519 3.45655 15.3419 5.71635 13.9481 7.10399L11.0638 9.97545C9.67003 11.3631 7.42018 11.3531 6.03867 9.95309Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.96133 6.04691C10.0805 6.1677 10.1894 6.29488 10.2878 6.42735L8.83718 7.87157C8.7645 7.72244 8.66677 7.58247 8.54395 7.45801C7.93833 6.84429 6.95205 6.83991 6.34104 7.44821L3.45679 10.3197C2.84578 10.928 2.84141 11.9186 3.44703 12.5323C4.05265 13.1461 5.03893 13.1504 5.64994 12.5421L6.02891 12.1649C6.4203 11.7752 7.05209 11.778 7.44004 12.1711C7.82798 12.5643 7.82518 13.1988 7.43378 13.5885L7.05482 13.9658C5.66101 15.3534 3.41117 15.3434 2.02965 13.9434C0.648136 12.5435 0.658103 10.2836 2.05191 8.89601L4.93616 6.02455C6.32997 4.63692 8.57982 4.64693 9.96133 6.04691Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                  id="step-1"
                />
              </a>
            </h1>
            <div
              class="emotion-14"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-18"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-19"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-22"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-12"
              />
            </div>
          </div>
          <p
            class="emotion-24"
          >
            Content for step 1
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 2
              <a
                class="headerlink emotion-10"
                href="#step-2"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M6.03867 9.95309C5.91948 9.8323 5.81065 9.70512 5.71217 9.57265L7.16282 8.12843C7.2355 8.27756 7.33323 8.41753 7.45605 8.54199C8.06167 9.15571 9.04795 9.1601 9.65896 8.55179L12.5432 5.68033C13.1542 5.07203 13.1586 4.08138 12.553 3.46767C11.9473 2.85395 10.9611 2.84956 10.3501 3.45786L9.97109 3.83515C9.5797 4.22481 8.94791 4.222 8.55996 3.82887C8.17202 3.43574 8.17482 2.80115 8.56622 2.41149L8.94518 2.03421C10.339 0.646579 12.5888 0.656589 13.9703 2.05657C15.3519 3.45655 15.3419 5.71635 13.9481 7.10399L11.0638 9.97545C9.67003 11.3631 7.42018 11.3531 6.03867 9.95309Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.96133 6.04691C10.0805 6.1677 10.1894 6.29488 10.2878 6.42735L8.83718 7.87157C8.7645 7.72244 8.66677 7.58247 8.54395 7.45801C7.93833 6.84429 6.95205 6.83991 6.34104 7.44821L3.45679 10.3197C2.84578 10.928 2.84141 11.9186 3.44703 12.5323C4.05265 13.1461 5.03893 13.1504 5.64994 12.5421L6.02891 12.1649C6.4203 11.7752 7.05209 11.778 7.44004 12.1711C7.82798 12.5643 7.82518 13.1988 7.43378 13.5885L7.05482 13.9658C5.66101 15.3534 3.41117 15.3434 2.02965 13.9434C0.648136 12.5435 0.658103 10.2836 2.05191 8.89601L4.93616 6.02455C6.32997 4.63692 8.57982 4.64693 9.96133 6.04691Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                  id="step-2"
                />
              </a>
            </h1>
            <div
              class="emotion-14"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-18"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-19"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-22"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-12"
              />
            </div>
          </div>
          <p
            class="emotion-24"
          >
            Content for step 2
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          3
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 3
              <a
                class="headerlink emotion-10"
                href="#step-3"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M6.03867 9.95309C5.91948 9.8323 5.81065 9.70512 5.71217 9.57265L7.16282 8.12843C7.2355 8.27756 7.33323 8.41753 7.45605 8.54199C8.06167 9.15571 9.04795 9.1601 9.65896 8.55179L12.5432 5.68033C13.1542 5.07203 13.1586 4.08138 12.553 3.46767C11.9473 2.85395 10.9611 2.84956 10.3501 3.45786L9.97109 3.83515C9.5797 4.22481 8.94791 4.222 8.55996 3.82887C8.17202 3.43574 8.17482 2.80115 8.56622 2.41149L8.94518 2.03421C10.339 0.646579 12.5888 0.656589 13.9703 2.05657C15.3519 3.45655 15.3419 5.71635 13.9481 7.10399L11.0638 9.97545C9.67003 11.3631 7.42018 11.3531 6.03867 9.95309Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.96133 6.04691C10.0805 6.1677 10.1894 6.29488 10.2878 6.42735L8.83718 7.87157C8.7645 7.72244 8.66677 7.58247 8.54395 7.45801C7.93833 6.84429 6.95205 6.83991 6.34104 7.44821L3.45679 10.3197C2.84578 10.928 2.84141 11.9186 3.44703 12.5323C4.05265 13.1461 5.03893 13.1504 5.64994 12.5421L6.02891 12.1649C6.4203 11.7752 7.05209 11.778 7.44004 12.1711C7.82798 12.5643 7.82518 13.1988 7.43378 13.5885L7.05482 13.9658C5.66101 15.3534 3.41117 15.3434 2.02965 13.9434C0.648136 12.5435 0.658103 10.2836 2.05191 8.89601L4.93616 6.02455C6.32997 4.63692 8.57982 4.64693 9.96133 6.04691Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                  id="step-3"
                />
              </a>
            </h1>
            <div
              class="emotion-14"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-18"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-19"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-22"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-12"
              />
            </div>
          </div>
          <p
            class="emotion-24"
          >
            Content for step 3
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          4
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 4
              <a
                class="headerlink emotion-10"
                href="#step-4"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M6.03867 9.95309C5.91948 9.8323 5.81065 9.70512 5.71217 9.57265L7.16282 8.12843C7.2355 8.27756 7.33323 8.41753 7.45605 8.54199C8.06167 9.15571 9.04795 9.1601 9.65896 8.55179L12.5432 5.68033C13.1542 5.07203 13.1586 4.08138 12.553 3.46767C11.9473 2.85395 10.9611 2.84956 10.3501 3.45786L9.97109 3.83515C9.5797 4.22481 8.94791 4.222 8.55996 3.82887C8.17202 3.43574 8.17482 2.80115 8.56622 2.41149L8.94518 2.03421C10.339 0.646579 12.5888 0.656589 13.9703 2.05657C15.3519 3.45655 15.3419 5.71635 13.9481 7.10399L11.0638 9.97545C9.67003 11.3631 7.42018 11.3531 6.03867 9.95309Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.96133 6.04691C10.0805 6.1677 10.1894 6.29488 10.2878 6.42735L8.83718 7.87157C8.7645 7.72244 8.66677 7.58247 8.54395 7.45801C7.93833 6.84429 6.95205 6.83991 6.34104 7.44821L3.45679 10.3197C2.84578 10.928 2.84141 11.9186 3.44703 12.5323C4.05265 13.1461 5.03893 13.1504 5.64994 12.5421L6.02891 12.1649C6.4203 11.7752 7.05209 11.778 7.44004 12.1711C7.82798 12.5643 7.82518 13.1988 7.43378 13.5885L7.05482 13.9658C5.66101 15.3534 3.41117 15.3434 2.02965 13.9434C0.648136 12.5435 0.658103 10.2836 2.05191 8.89601L4.93616 6.02455C6.32997 4.63692 8.57982 4.64693 9.96133 6.04691Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                  id="step-4"
                />
              </a>
            </h1>
            <div
              class="emotion-14"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-18"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-19"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-22"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-12"
              />
            </div>
          </div>
          <p
            class="emotion-24"
          >
            Content for step 4
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          5
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 5
              <a
                class="headerlink emotion-10"
                href="#step-5"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M6.03867 9.95309C5.91948 9.8323 5.81065 9.70512 5.71217 9.57265L7.16282 8.12843C7.2355 8.27756 7.33323 8.41753 7.45605 8.54199C8.06167 9.15571 9.04795 9.1601 9.65896 8.55179L12.5432 5.68033C13.1542 5.07203 13.1586 4.08138 12.553 3.46767C11.9473 2.85395 10.9611 2.84956 10.3501 3.45786L9.97109 3.83515C9.5797 4.22481 8.94791 4.222 8.55996 3.82887C8.17202 3.43574 8.17482 2.80115 8.56622 2.41149L8.94518 2.03421C10.339 0.646579 12.5888 0.656589 13.9703 2.05657C15.3519 3.45655 15.3419 5.71635 13.9481 7.10399L11.0638 9.97545C9.67003 11.3631 7.42018 11.3531 6.03867 9.95309Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.96133 6.04691C10.0805 6.1677 10.1894 6.29488 10.2878 6.42735L8.83718 7.87157C8.7645 7.72244 8.66677 7.58247 8.54395 7.45801C7.93833 6.84429 6.95205 6.83991 6.34104 7.44821L3.45679 10.3197C2.84578 10.928 2.84141 11.9186 3.44703 12.5323C4.05265 13.1461 5.03893 13.1504 5.64994 12.5421L6.02891 12.1649C6.4203 11.7752 7.05209 11.778 7.44004 12.1711C7.82798 12.5643 7.82518 13.1988 7.43378 13.5885L7.05482 13.9658C5.66101 15.3534 3.41117 15.3434 2.02965 13.9434C0.648136 12.5435 0.658103 10.2836 2.05191 8.89601L4.93616 6.02455C6.32997 4.63692 8.57982 4.64693 9.96133 6.04691Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                  id="step-5"
                />
              </a>
            </h1>
            <div
              class="emotion-14"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-18"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-19"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-22"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-12"
              />
            </div>
          </div>
          <p
            class="emotion-24"
          >
            Content for step 5
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          6
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 6
              <a
                class="headerlink emotion-10"
                href="#step-6"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M6.03867 9.95309C5.91948 9.8323 5.81065 9.70512 5.71217 9.57265L7.16282 8.12843C7.2355 8.27756 7.33323 8.41753 7.45605 8.54199C8.06167 9.15571 9.04795 9.1601 9.65896 8.55179L12.5432 5.68033C13.1542 5.07203 13.1586 4.08138 12.553 3.46767C11.9473 2.85395 10.9611 2.84956 10.3501 3.45786L9.97109 3.83515C9.5797 4.22481 8.94791 4.222 8.55996 3.82887C8.17202 3.43574 8.17482 2.80115 8.56622 2.41149L8.94518 2.03421C10.339 0.646579 12.5888 0.656589 13.9703 2.05657C15.3519 3.45655 15.3419 5.71635 13.9481 7.10399L11.0638 9.97545C9.67003 11.3631 7.42018 11.3531 6.03867 9.95309Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.96133 6.04691C10.0805 6.1677 10.1894 6.29488 10.2878 6.42735L8.83718 7.87157C8.7645 7.72244 8.66677 7.58247 8.54395 7.45801C7.93833 6.84429 6.95205 6.83991 6.34104 7.44821L3.45679 10.3197C2.84578 10.928 2.84141 11.9186 3.44703 12.5323C4.05265 13.1461 5.03893 13.1504 5.64994 12.5421L6.02891 12.1649C6.4203 11.7752 7.05209 11.778 7.44004 12.1711C7.82798 12.5643 7.82518 13.1988 7.43378 13.5885L7.05482 13.9658C5.66101 15.3534 3.41117 15.3434 2.02965 13.9434C0.648136 12.5435 0.658103 10.2836 2.05191 8.89601L4.93616 6.02455C6.32997 4.63692 8.57982 4.64693 9.96133 6.04691Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                  id="step-6"
                />
              </a>
            </h1>
            <div
              class="emotion-14"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-18"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-19"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-22"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-12"
              />
            </div>
          </div>
          <p
            class="emotion-24"
          >
            Content for step 6
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          7
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 7
              <a
                class="headerlink emotion-10"
                href="#step-7"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M6.03867 9.95309C5.91948 9.8323 5.81065 9.70512 5.71217 9.57265L7.16282 8.12843C7.2355 8.27756 7.33323 8.41753 7.45605 8.54199C8.06167 9.15571 9.04795 9.1601 9.65896 8.55179L12.5432 5.68033C13.1542 5.07203 13.1586 4.08138 12.553 3.46767C11.9473 2.85395 10.9611 2.84956 10.3501 3.45786L9.97109 3.83515C9.5797 4.22481 8.94791 4.222 8.55996 3.82887C8.17202 3.43574 8.17482 2.80115 8.56622 2.41149L8.94518 2.03421C10.339 0.646579 12.5888 0.656589 13.9703 2.05657C15.3519 3.45655 15.3419 5.71635 13.9481 7.10399L11.0638 9.97545C9.67003 11.3631 7.42018 11.3531 6.03867 9.95309Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.96133 6.04691C10.0805 6.1677 10.1894 6.29488 10.2878 6.42735L8.83718 7.87157C8.7645 7.72244 8.66677 7.58247 8.54395 7.45801C7.93833 6.84429 6.95205 6.83991 6.34104 7.44821L3.45679 10.3197C2.84578 10.928 2.84141 11.9186 3.44703 12.5323C4.05265 13.1461 5.03893 13.1504 5.64994 12.5421L6.02891 12.1649C6.4203 11.7752 7.05209 11.778 7.44004 12.1711C7.82798 12.5643 7.82518 13.1988 7.43378 13.5885L7.05482 13.9658C5.66101 15.3534 3.41117 15.3434 2.02965 13.9434C0.648136 12.5435 0.658103 10.2836 2.05191 8.89601L4.93616 6.02455C6.32997 4.63692 8.57982 4.64693 9.96133 6.04691Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="emotion-12"
                />
                <div
                  class="emotion-13"
                  id="step-7"
                />
              </a>
            </h1>
            <div
              class="emotion-14"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-15"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-18"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.71428V10.2857C1 11.2325 1.76751 12 2.71429 12H5.75V7.10957C5.75 6.54414 5.97724 6.00244 6.38065 5.60623L8.67403 3.35381C8.77447 3.25516 8.88376 3.16757 9 3.09182V2.71429C9 1.76751 8.23249 1 7.28571 1H5.8V4.42857C5.8 5.13865 5.22437 5.71428 4.51429 5.71428H1ZM9 4.78571L7.25654 6.49804C7.24689 6.50752 7.23749 6.5172 7.22834 6.52708C7.22208 6.53383 7.21594 6.54068 7.20991 6.54762C7.07504 6.70295 7 6.90234 7 7.10957V7.79762H9H10.0095C10.4829 7.79762 10.8667 7.41386 10.8667 6.94047V4H10.1505C9.92587 4 9.7102 4.0882 9.54992 4.24562L9 4.78571ZM4.86667 1H4.15053C3.92587 1 3.7102 1.0882 3.54992 1.24562L1.25654 3.49804C1.09244 3.65921 1 3.87957 1 4.10957V4.79762H4.00952C4.48291 4.79762 4.86667 4.41386 4.86667 3.94047V1ZM7 12V8.71428H9H10.5143C11.2244 8.71428 11.8 8.13865 11.8 7.42857V4H13.2857C14.2325 4 15 4.76751 15 5.71429V13.2857C15 14.2325 14.2325 15 13.2857 15H8.71429C7.76751 15 7 14.2325 7 13.2857V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-19"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-16"
                />
                <div
                  class="emotion-17"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-22"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-12"
              />
            </div>
          </div>
          <p
            class="emotion-24"
          >
            Content for step 7
          </p>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

.emotion-1 {
  gap: 16px;
}

.emotion-1 h2,
.emotion-1 h4,
.emotion-1 h5,
.emotion-1 h6 {
  margin-top: unset;
}

.emotion-1 h3 {
  margin-top: 2px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  border: 1.5px solid #C1C7C6;
  font-weight: 500;
  font-size: 16px;
  line-height: 28px;
  background-color: inherit;
  color: var(--opposite-color);
  height: 27px;
  width: 27px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 section>*,
.emotion-6 ol p,
.emotion-6 ul p {
  margin-bottom: 16px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 600;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10>span>code,
.emotion-10>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10:focus,
.emotion-10:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-10:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-10:hover {
  text-decoration-color: #E8EDEB;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="emotion-8"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-8"
        >
          <a
            class="emotion-10"
            href="/connect#std-label-connect-run-compass/"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="emotion-8"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-8"
        >
          <a
            class="emotion-10"
            href="/import-export#std-label-compass-import-export/"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
